--- a/eeg-data/data-extract.ipynb
+++ b/eeg-data/data-extract.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "id": "f1090569",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy as sp\n",
-    "from pathlib import Path\n",
-    "import pandas as pd"
+    "from pathlib import Path"
    ]
   },
   {
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 232,
    "id": "c1e1aacc",
    "metadata": {},
    "outputs": [
@@ -32,6 +31,7 @@
      "output_type": "stream",
      "text": [
       "Columns:  ('INIT_DELAY', 'MI_DURATION', 'subjectId', 'fs', 'trialsData', 'trialsLabels')\n",
+      "Subject Names:  ['PAT021_A', 'PATID15', 'PATID16', 'PATID26', 'PAT013', 'PAT015']\n",
       "Loaded data for 6 subjects.\n"
      ]
     }
@@ -40,14 +40,16 @@
     "# Load all .mat files and extract relevant data\n",
     "path = Path('.').glob('*.mat')\n",
     "all_subjects = [sp.io.loadmat(f, squeeze_me=True)['subjectData'] for f in path]\n",
+    "subject_names = [s['subjectId'].item() for s in all_subjects]\n",
     "columns = all_subjects[0].dtype.names\n",
     "print(\"Columns: \", columns)\n",
+    "print(\"Subject Names: \", subject_names)\n",
     "print(\"Loaded data for\", len(all_subjects), \"subjects.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 233,
    "id": "81dcd652",
    "metadata": {},
    "outputs": [
@@ -78,26 +80,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "7fb2f548",
+   "execution_count": 234,
+   "id": "eafe89ae",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
+      "Extracted data shapes for each subject:\n",
+      "Subject 1 (PAT021_A): 1236 trials, 16 channels, 1536 timepoints\n",
+      "Subject 2 (PATID15): 1960 trials, 16 channels, 1536 timepoints\n",
+      "Subject 3 (PATID16): 434 trials, 16 channels, 1536 timepoints\n",
+      "Subject 4 (PATID26): 1464 trials, 16 channels, 1536 timepoints\n",
+      "Subject 5 (PAT013): 494 trials, 16 channels, 1536 timepoints\n",
+      "Subject 6 (PAT015): 1126 trials, 16 channels, 1536 timepoints\n"
      ]
     }
    ],
    "source": [
-    "# Extract EEG data and corresponding labels (1 for left hand, 2 for right hand)\n",
-    "X = np.array([s['trialsData'] for s in all_subjects])\n",
-    "y = np.array([s['trialsLabels'] for s in all_subjects])\n",
+    "# Extract EEG data and labels for all subjects\n",
+    "X = []  # (subject, trials, channels, timepoints)\n",
+    "y = []  # (subject, trials)\n",
     "\n",
+    "for i, subject in enumerate(all_subjects):\n",
+    "    # Unwrap scalar-wrapped arrays (common EEG data loading artifact)\n",
+    "    trials = np.atleast_1d(subject['trialsData'])[0]  # Shape: (n_trials,)\n",
+    "    trials_labels = np.atleast_1d(subject['trialsLabels'])[0]  # Shape: (n_trials,)\n",
+    "    \n",
+    "    subject_X = np.array([trial for trial in trials]).transpose(0, 2, 1)  # Shape: (n_trials, n_channels, n_timepoints)\n",
     "\n",
-    "# print(\"Data shape (subjects, trials, channels, timepoints): \", X.shape)\n",
-    "print(type(X[0]))"
+    "    X.append(subject_X)\n",
+    "    y.append(trials_labels)\n",
+    "\n",
+    "print(\"Extracted data shapes for each subject:\")\n",
+    "for i, (name, subj_X) in enumerate(zip(subject_names, X)):\n",
+    "    n_trials, n_ch, n_t = subj_X.shape\n",
+    "    print(f\"Subject {i+1} ({name}): {n_trials} trials, {n_ch} channels, {n_t} timepoints\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dfad5d3",
+   "metadata": {},
+   "source": [
+    "# Save to Pickle file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb7c04df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle \n",
+    "\n",
+    "pickle.dump((X, y), open('extract.p', 'wb'))"
    ]
   }
  ],
