added import extracted data to pre-processing

--- a/eeg-data/data-extract.ipynb
+++ b/eeg-data/data-extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 236,
    "id": "f1090569",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 237,
    "id": "c1e1aacc",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 238,
    "id": "81dcd652",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 239,
    "id": "eafe89ae",
    "metadata": {},
    "outputs": [
@@ -129,14 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "id": "eb7c04df",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle \n",
     "\n",
-    "pickle.dump((X, y), open('extract.p', 'wb'))"
+    "with open('extract.p', 'wb') as f:\n",
+    "    pickle.dump((X, y), f)"
    ]
   }
  ],
