--- a/eeg-data/data-extract.ipynb
+++ b/eeg-data/data-extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 1,
    "id": "f1090569",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 2,
    "id": "c1e1aacc",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 3,
    "id": "81dcd652",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "id": "eafe89ae",
    "metadata": {},
    "outputs": [
@@ -89,18 +89,18 @@
      "output_type": "stream",
      "text": [
       "Extracted data shapes for each subject:\n",
-      "Subject 1 (PAT021_A): 1236 trials, 16 channels, 1536 timepoints\n",
-      "Subject 2 (PATID15): 1960 trials, 16 channels, 1536 timepoints\n",
-      "Subject 3 (PATID16): 434 trials, 16 channels, 1536 timepoints\n",
-      "Subject 4 (PATID26): 1464 trials, 16 channels, 1536 timepoints\n",
-      "Subject 5 (PAT013): 494 trials, 16 channels, 1536 timepoints\n",
-      "Subject 6 (PAT015): 1126 trials, 16 channels, 1536 timepoints\n"
+      "Subject 1 (PAT021_A): 1236 trials, 1536 timepoints, 16 channels\n",
+      "Subject 2 (PATID15): 1960 trials, 1536 timepoints, 16 channels\n",
+      "Subject 3 (PATID16): 434 trials, 1536 timepoints, 16 channels\n",
+      "Subject 4 (PATID26): 1464 trials, 1536 timepoints, 16 channels\n",
+      "Subject 5 (PAT013): 494 trials, 1536 timepoints, 16 channels\n",
+      "Subject 6 (PAT015): 1126 trials, 1536 timepoints, 16 channels\n"
      ]
     }
    ],
    "source": [
     "# Extract EEG data and labels for all subjects\n",
-    "X = []  # (subject, trials, channels, timepoints)\n",
+    "X = []  # (subject, trials, timepoints, channels)\n",
     "y = []  # (subject, trials)\n",
     "\n",
     "for i, subject in enumerate(all_subjects):\n",
@@ -108,15 +108,15 @@
     "    trials = np.atleast_1d(subject['trialsData'])[0]  # Shape: (n_trials,)\n",
     "    trials_labels = np.atleast_1d(subject['trialsLabels'])[0]  # Shape: (n_trials,)\n",
     "    \n",
-    "    subject_X = np.array([trial for trial in trials]).transpose(0, 2, 1)  # Shape: (n_trials, n_channels, n_timepoints)\n",
+    "    subject_X = np.array([trial for trial in trials])  # Shape: (n_trials, n_timepoints, n_channels)\n",
     "\n",
     "    X.append(subject_X)\n",
     "    y.append(trials_labels)\n",
     "\n",
     "print(\"Extracted data shapes for each subject:\")\n",
     "for i, (name, subj_X) in enumerate(zip(subject_names, X)):\n",
-    "    n_trials, n_ch, n_t = subj_X.shape\n",
-    "    print(f\"Subject {i+1} ({name}): {n_trials} trials, {n_ch} channels, {n_t} timepoints\")"
+    "    n_trials, n_t, n_ch = subj_X.shape\n",
+    "    print(f\"Subject {i+1} ({name}): {n_trials} trials, {n_t} timepoints, {n_ch} channels\")"
    ]
   },
   {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 5,
    "id": "eb7c04df",
    "metadata": {},
    "outputs": [],
