--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -14,6 +14,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29d5233f",
+   "metadata": {},
+   "source": [
+    "# _TODO_\n",
+    "- Try excluding the subjects with fewer trials \n",
+    "- Try shuffle the trials for generalization or specialize for a single subject for accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "35725a57",
    "metadata": {},
    "source": [
