--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -587,6 +587,27 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc2bc134",
+   "metadata": {},
+   "source": [
+    "# Save to Pickle file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "11373f6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle \n",
+    "\n",
+    "with open('preprocessed.p', 'wb') as f:\n",
+    "    pickle.dump((X, y), f)"
+   ]
   }
  ],
  "metadata": {
