--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 93,
    "id": "995b8f1f",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 94,
    "id": "7f3e0f28",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 95,
    "id": "ed363a30",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 96,
    "id": "bb304af8",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 97,
    "id": "216b9133",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 98,
    "id": "8d0ac787",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 99,
    "id": "8480bd59",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 100,
    "id": "f78e8457",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "(3999744, 16)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 101,
    "id": "f83ea710",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "(6, 434, 1536, 6)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 102,
    "id": "77094b47",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "id": "958f03b8",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 104,
    "id": "fd5ab4da",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 105,
    "id": "cf436e01",
    "metadata": {},
    "outputs": [
@@ -516,18 +516,19 @@
     "            beta_power[s, t, c] = np.sum(psd[beta_idx])\n",
     "\n",
     "# Combine mu and beta power into feature vector\n",
-    "features = np.zeros((n_subjects, n_trials, n_components, 2))\n",
+    "X_features = np.zeros((n_subjects, n_trials, n_components, 2))\n",
     "\n",
     "for s in range(n_subjects):\n",
     "    for t in range(n_trials):\n",
     "        for c in range(n_components):\n",
-    "            features[s, t, c, 0] = mu_power[s, t, c]    # µ band\n",
-    "            features[s, t, c, 1] = beta_power[s, t, c]  # β band\n",
+    "            X_features[s, t, c, 0] = mu_power[s, t, c]    # µ band\n",
+    "            X_features[s, t, c, 1] = beta_power[s, t, c]  # β band\n",
     "\n",
     "\n",
     "print(\"Mu power shape:\", mu_power.shape)\n",
     "print(\"Beta power shape:\", beta_power.shape)\n",
-    "print(\"Feature shape:\", features.shape)\n"
+    "print(\"Feature shape:\", X_features.shape)\n",
+    "\n"
    ]
   },
   {
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 106,
    "id": "6657c84f",
    "metadata": {},
    "outputs": [
@@ -558,7 +559,7 @@
    "source": [
     "# Flatten subjects and trials\n",
     "# Shape: (subjects*trials, components, bands)\n",
-    "X_plot = features.reshape(-1, features.shape[2], features.shape[3])\n",
+    "X_plot = X_features.reshape(-1, X_features.shape[2], X_features.shape[3])\n",
     "y_plot = y.reshape(-1)\n",
     "\n",
     "# Separate classes\n",
@@ -598,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 107,
    "id": "11373f6f",
    "metadata": {},
    "outputs": [],
@@ -606,7 +607,7 @@
     "import pickle \n",
     "\n",
     "with open('preprocessed.p', 'wb') as f:\n",
-    "    pickle.dump((X, y), f)"
+    "    pickle.dump((X_features, y), f)"
    ]
   }
  ],
