--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "fa96b67e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "b69c794f",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "495d7d01",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "19dece3e",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "2d548089",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
       "Training on 2170 samples, testing on 434 samples\n",
       "Training set class distribution (0s and 1s): [1106 1064]\n",
       "Testing set class distribution (0s and 1s): [238 196]\n",
-      "Testing set predictions accuracy: 0.511520737327189\n",
+      "Testing set predictions accuracy: 0.4377880184331797\n",
       "\n",
       "Subject left out for testing: 2\n",
       "Training on 2170 samples, testing on 434 samples\n",
@@ -144,7 +144,7 @@
       "Training on 2170 samples, testing on 434 samples\n",
       "Training set class distribution (0s and 1s): [1123 1047]\n",
       "Testing set class distribution (0s and 1s): [221 213]\n",
-      "Testing set predictions accuracy: 0.511520737327189\n",
+      "Testing set predictions accuracy: 0.5069124423963134\n",
       "\n",
       "Subject left out for testing: 4\n",
       "Training on 2170 samples, testing on 434 samples\n",
@@ -158,7 +158,7 @@
       "Testing set class distribution (0s and 1s): [238 196]\n",
       "Testing set predictions accuracy: 0.5483870967741935\n",
       "\n",
-      "Average cross-subject accuracy: 0.5096006144393241\n"
+      "Average cross-subject accuracy: 0.49654377880184336\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "a09ce6da",
    "metadata": {},
    "outputs": [
@@ -208,8 +208,8 @@
       "Training on 2083 samples, testing on 521 samples\n",
       "Training set class distribution (0s and 1s): [1075 1008]\n",
       "Testing set class distribution (0s and 1s): [269 252]\n",
-      "Mean accuracy on test set: 0.5489443378119002\n",
-      "Best C found in inner CV: 0.1\n",
+      "Mean accuracy on test set: 0.5393474088291746\n",
+      "Best C found in inner CV: 10\n",
       "\n",
       "Outer fold 2:\n",
       "Training on 2083 samples, testing on 521 samples\n",
@@ -222,24 +222,24 @@
       "Training on 2083 samples, testing on 521 samples\n",
       "Training set class distribution (0s and 1s): [1075 1008]\n",
       "Testing set class distribution (0s and 1s): [269 252]\n",
-      "Mean accuracy on test set: 0.5758157389635317\n",
-      "Best C found in inner CV: 0.1\n",
+      "Mean accuracy on test set: 0.5431861804222649\n",
+      "Best C found in inner CV: 10\n",
       "\n",
       "Outer fold 4:\n",
       "Training on 2083 samples, testing on 521 samples\n",
       "Training set class distribution (0s and 1s): [1075 1008]\n",
       "Testing set class distribution (0s and 1s): [269 252]\n",
-      "Mean accuracy on test set: 0.5393474088291746\n",
-      "Best C found in inner CV: 10\n",
+      "Mean accuracy on test set: 0.5374280230326296\n",
+      "Best C found in inner CV: 1\n",
       "\n",
       "Outer fold 5:\n",
       "Training on 2084 samples, testing on 520 samples\n",
       "Training set class distribution (0s and 1s): [1076 1008]\n",
       "Testing set class distribution (0s and 1s): [268 252]\n",
-      "Mean accuracy on test set: 0.575\n",
+      "Mean accuracy on test set: 0.55\n",
       "Best C found in inner CV: 10\n",
       "\n",
-      "Overall average accuracy across outer folds: 0.5560748560460652\n"
+      "Overall average accuracy across outer folds: 0.5422456813819577\n"
      ]
     }
    ],
@@ -309,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dtu02450",
+   "display_name": "bci",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
