--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "995b8f1f",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
    "id": "541dc4c4",
    "metadata": {},
    "source": [
-    "# Power Spectrum Analysis\n",
+    "# Frequence Spectrum Analysis\n",
     "⚠️ From now on, only **CSP** data is used"
    ]
   },
