added raw data plot

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d8977983",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,8 @@
     "    plt.suptitle(title)\n",
     "    plt.tight_layout()\n",
     "\n",
-    "plot_EEG_channel(EEG_raw[0, 0, :, 0], fs, \"Raw EEG - Subject 1, Trial 1, Channel 1\") # example: subject 1, trial 1, channel 1"
+    "plot_EEG_channel(EEG_raw[0, 0, :, 0], fs, \"Raw EEG - Subject 1, Trial 1, Channel 1\") # example: subject 1, trial 1, channel 1\n",
+    "show_and_save_plot()"
    ]
   },
   {
